--- a/local.venv/pyvenv.cfg
+++ b/local.venv/pyvenv.cfg
@@ -1,3 +1,5 @@
-home = /usr/bin
+home = C:\Users\bruno\AppData\Local\Programs\Python\Python312
 include-system-site-packages = false
-version = 3.10.12
+version = 3.12.0
+executable = C:\Users\bruno\AppData\Local\Programs\Python\Python312\python.exe
+command = C:\Users\bruno\AppData\Local\Programs\Python\Python312\python.exe -m venv G:\Bunny\Uff\TCC\implementation\local.venv
